RESOLVED FIXED150330
Fix the ENABLE(WEBASSEMBLY) build after r190827
https://bugs.webkit.org/show_bug.cgi?id=150330
Summary Fix the ENABLE(WEBASSEMBLY) build after r190827
Csaba Osztrogonác
Reported 2015-10-19 07:20:54 PDT
https://trac.webkit.org/changeset/190827 broke the ENABLE(WEBASSEMBLY) build in many places. It's obvious that the changes in ENABLE(WEBASSEMBLY) blocks were speculative changes and nobody tried to build it anytime. Fix is coming.
Attachments
Patch (5.65 KB, patch)
2015-10-19 07:34 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-10-19 07:27:22 PDT
for example: ------------- CodeBlock::CodeBlock(VM* vm, Structure* structure, WebAssemblyExecutable* ownerExecutable, VM& vm, JSGlobalObject* globalObject) "VM* vm" vs "VM& vm" --- WebAssemblyCodeBlock* codeBlock = WebAssemblyCodeBlock::create(vm, this, exec->lexicalGlobalObject())); extra ")" at the end ...
Csaba Osztrogonác
Comment 2 2015-10-19 07:34:28 PDT
Geoffrey Garen
Comment 3 2015-10-19 09:11:03 PDT
Comment on attachment 263481 [details] Patch r=me
WebKit Commit Bot
Comment 4 2015-10-19 09:20:48 PDT
Comment on attachment 263481 [details] Patch Clearing flags on attachment: 263481 Committed r191291: <http://trac.webkit.org/changeset/191291>
WebKit Commit Bot
Comment 5 2015-10-19 09:20:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.