Fix the ENABLE(WEBASSEMBLY) build after r190827 https://bugs.webkit.org/show_bug.cgi?id=150330

Reviewed by Geoffrey Garen.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::CodeBlock): Removed the duplicated VM argument.
* bytecode/CodeBlock.h:
(JSC::WebAssemblyCodeBlock::create): Added new parameters to finishCreation() calls.
(JSC::WebAssemblyCodeBlock::WebAssemblyCodeBlock): Change VM parameter to pointer to match *CodeBlock classes.
* runtime/Executable.cpp:
(JSC::WebAssemblyExecutable::prepareForExecution): Removed extra ")" and pass pointer as it is expected.


Canonical link: https://commits.webkit.org/168461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191291 268f45cc-cd09-0410-ab3c-d52691b4dbfc